# CMPE-275-mini1

./: .gitignore  CMakeLists.txt  HANDOVER.md  README.md  mini1-memory-nyc.md
doc/: PHASE 2 HANDOVER.md  PROJECT_WALKTHROUGH.md  REPORT.md  RESULT_SUMMARY.md
include/taxi/: BenchmarkRunner.hpp  CsvReader.hpp  DatasetManager.hpp  ParallelLoader.hpp  SoAQueryEngine.hpp
python/: plot_comparison.py  plot_scaling.py
results/: bench_phase3_local.csv  bench_phase3b_local.csv
results/benchmarks/: bench_phase2_local.csv
results/benchmarks/scaling/: scaling_aos_t1.csv  scaling_aos_t2.csv  scaling_aos_t4.csv  scaling_soa_t2.csv  scaling_soa_t4.csv  scaling_soa_t8.csv
results/tests/: unit_test_results.txt
scripts/: create_test_data.sh  download_tlc_data.sh  run_benchmark.sh  run_scaling_benchmark.sh  validate_build.sh
src/: CsvReader.cpp  DatasetManager.cpp  ParallelLoader.cpp  QueryEngine.cpp  SoAQueryEngine.cpp  TimeIndex.cpp  benchmark_main.cpp  test_csv_reader.cpp  test_query_engine.cpp  unit_tests.cpp
